refresh overflow fixed

--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -12,7 +12,7 @@ html {
 
 body {
     margin: 0;
-    padding: 0 !important;
+    padding: 0;
     background-color: #D9A9C8;
     overflow-x: hidden;
     overflow-y: auto;
@@ -266,5 +266,3 @@ input {
         height: 100%;
     }
 }
-
-@keyframes loader3 {}
